js/src/tests/test262/language/expressions/dynamic-import/syntax/invalid/nested-function-return-no-rest-param.js
DONOTEVALUATE
(
)
;
function
fn
(
)
{
return
import
(
.
.
.
[
'
'
]
)
;
}
